--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/grids.css">
+    <link rel="stylesheet" href="css/iconfont.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -22,23 +25,40 @@
             <a href="home.html" id="logo-wordmark" class="main_nav_item">
               <img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo">
             </a>
-            <a href="shop.html" class="main_nav_item"><span class="current_link">Shop</span></a>
-            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
+            <a href="shop.html" class="main_nav_item">Shop</a>
+            <a href="#" class="main_nav_item">Lookbooks</a>
             <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
+            <div class="icon_nav">
+              <a href="checkout_cart.html" class="main_nav_item"><i class="material-icons">shopping_cart</i></a>
+              <a href="#" class="main_nav_item"><i class="material-icons">search</i></a>
+            </div>
           </nav>
         </div>
 
         <!-- Mobile Navigation -->
         <div class="mobile_nav">
           <nav class="main_nav">
-            <a href="home.html" id="logo-icon" class="main_nav_item">
-              <img src="img/olderbrother-icon.png" alt="Olderbrother Logo Icon">
+            <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="material-icons">menu</i>
             </a>
-            <a href="shop.html" class="main_nav_item">Shop</a>
-            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="about.html" class="main_nav_item">About</a>
-            <a href="journal.html" class="main_nav_item">Journal</a>
+            <div class="mobile-links">
+              <div class="logo_nav">
+                <a href="home.html"><img src="img/olderbrother-wordmark.png" alt="Olderbrother Logo" id="logo-wordmark"></a>
+              </div>
+              <div class="icon_nav">
+                <a href="checkout_cart.html"><i class="material-icons">shopping_cart</i></a>
+                <a href="#"><i class="material-icons">search</i></a>
+              </div>
+            </div>
+            <div id="dropdown-links">
+              <a href="shop.html">Shop</a>
+              <a href="#">Lookbooks</a>
+              <a href="about.html">About</a>
+              <a href="journal.html">Journal</a>
+            </div>
+
           </nav>
         </div>
 
@@ -87,7 +107,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-classic-shirt-white.png" alt="Lookbook - Classic Shirt">
               <img class="hover-img" src="img/classic-shirt-white.png" alt="Classic Shirt - White">
             </a>
@@ -101,7 +121,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
               <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
             </a>
@@ -115,7 +135,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-jeans-sky-indigo.png" alt="Lookbook - Jeans">
               <img class="hover-img" src="img/jeans-sky-indigo.png" alt="Jeans - Sky Indigo">
             </a>
@@ -129,7 +149,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
               <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
             </a>
@@ -143,7 +163,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-rugby-shirt-saffron-sky-dark-indigo.png" alt="Lookbook - Rugby Shirt">
               <img class="hover-img" src="img/rugby-shirt-saffron-sky-dark-indigo.png" alt="Rugby Shirt - Saffron/Sky Indigo/Dark Indigo">
             </a>
@@ -157,7 +177,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
               <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
             </a>
@@ -171,7 +191,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-raglan-crew_tie-dye-sky-indigo.png" alt="Lookbook - Raglan Crew">
               <img class="hover-img" src="img/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
             </a>
@@ -185,7 +205,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-blazer-white.png" alt="Lookbook - Blazer">
               <img class="hover-img" src="img/blazer-white.png" alt="Blazer - White">
             </a>
@@ -199,7 +219,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
               <img class="hover-img" src="img/leisure-shirt-white.png" alt="Leisure Shirt - White">
             </a>
@@ -213,7 +233,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-tank-top-sky-indigo.png" alt="Lookbook - Tank Top">
               <img class="hover-img" src="img/tank-top-sky-indigo.png" alt="Tank Top - Sky Indigo">
             </a>
@@ -227,7 +247,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
               <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
             </a>
@@ -241,7 +261,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
               <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
@@ -255,7 +275,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
               <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
@@ -269,7 +289,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
               <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
             </a>
@@ -283,7 +303,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail1.html">
               <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
               <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
             </a>
@@ -297,7 +317,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_detail.html">
+            <a href="product_detail2.html">
               <img src="img/look-vest-natural.png" alt="Lookbook - Vest">
               <img class="hover-img" src="img/vest-natural.png" alt="Vest - Natural">
             </a>
@@ -313,32 +333,79 @@
 
     </div>
 
-    <!-- footer -->
+    <footer class="page_footer">
 
-    <footer>
-      <div id="footer_items">
-        <div class="footer-items-logo">
-          <img src="img/olderbrother-icon.png" alt="">
-        </div>
-          <div class="footer-items-nav">
-            <nav>
-              <a href="#" class="main_nav_item">Account</a>
-              <a href="#" class="main_nav_item">FAQs</a>
-              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
-              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
-            </nav>
+        <div id="main_footer" class="content_container">
+
+          <div id="footer-newsletter">
+            <div class="block">
+              <h4 class="footer-title">Subscribe to our Newsletter</h4>
+              <p class="newsletter-desc">Universal garments equally tailored to fit men, women and people. Sign up to receive updates on new launches and news.</p>
+
+              <div class="footer-items-form">
+                <input type="text" id="subscribe-news-input" class="input-box" placeholder="Email Address">
+                <a href="#" id="subscribe-news-btn" class="primary-btn">Submit</a>
+              </div>
+            </div>
           </div>
-      </div>
-      <div class="footer-items-form">
-        <h4>Subscribe to our newsletter</h4>
-        <label for="input-name" class="text-label"></label>
-        <input type="text" id="input-name" value="Email Address">
-        <a href="#" class="primary-btn">Submit</a>
+
+          <div id="footer-nav">
+            <div class="block">
+              <h4 class="footer-title">Company</h4>
+              <div class="footer-links">
+                <a href="about.html">About Us</a><br>
+                <a href="#">Careers</a><br>
+                <a href="#">Press</a><br>
+                <a href="#">Stockists</a>
+              </div>
+            </div>
+
+            <div class="block">
+              <h4 class="footer-title">Contact</h4>
+              <div class="footer-links">
+                <a href="mailto:howdy@olderbrother.us">Email Us</a><br>
+                <a href="#">Visit the Store</a><br>
+                <a href="#">Help & FAQ</a><br>
+                <a href="#">Shipping</a>
+              </div>
+            </div>
+
+            <div class="block">
+              <div class="footer-social-media content_icon">
+                <h4 class="footer-title">Stay Connected</h4>
+                <ul class="icon_lists">
+                  <li class="icon">
+                    <span class="iconfont"><a href="https://twitter.com/olderbrotherus" target="_blank" title="Twitter">&#xe84c;</a></span>
+                  </li>
+                  <li class="icon">
+                    <span class="iconfont"><a href="https://www.instagram.com/olderbrother" target="_blank" title="Instagram">&#xe6fc;</a></span>
+                  </li>
+                  <li class="icon">
+                    <span class="iconfont"><a href="https://www.pinterest.ca/olderbrotherpin/" target="_blank" title="Pinterest">&#xe7a8;</a></span>
+                  </li>
+                  <li class="icon">
+                    <span class="iconfont"><a href="https://www.facebook.com/OlderBrother.us/" target="_blank" title="Facebook">&#xe64e;</a></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+        </div>
       </div>
 
-      <div class="footer-copyright">
-        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      <div class="footer_copyright">
+        <div class="content_container">
+          <div class="copyright-text">
+            <a href="#">Copyright © IAT 339 Team 16</a>
+          </div>
+          <div class="copyright-links">
+            <a href="style_guide.html" target="_blank">Style Guide</a>
+            <a href="https://github.com/joyceca9/P02-Company" target="_blank">Github</a>
+            <a href="citations.html" target="_blank">Citations</a>
+          </div>
+        </div>
       </div>
+
     </footer>
 
   </body>
